--- a/.github/workflows/publish-docker-hub.yml
+++ b/.github/workflows/publish-docker-hub.yml
@@ -14,6 +14,9 @@ jobs:
     steps:
       - name: Check out the repo
         uses: actions/checkout@v2
+      - name: Get the version
+        id: get_version
+        run: echo ::set-output name=VERSION::${GITHUB_REF/refs\/tags\//}
       - name: Log in to Docker Hub
         uses: docker/login-action@v1
         with:
@@ -24,5 +27,5 @@ jobs:
         with:
           push: true
           tags: |
-            flaviotvrs/mongodb-migration-tools:${{ github.ref }}
+            flaviotvrs/mongodb-migration-tools:${{ steps.get_version.outputs.VERSION }}
             flaviotvrs/mongodb-migration-tools:latest
